@@ -65,14 +65,16 @@ public class FrontController extends HttpServlet {
 
             //リクエストからパラメータ"action"の値を取得 (例:"Employee"、"Report")
             String actionString = request.getParameter(ForwardConst.ACT.getValue());
+            System.out.println("actionString: " + actionString);
 
             //該当するActionオブジェクトを作成 (例:リクエストからパラメータ action=Employee の場合、actions.EmployeeActionオブジェクト)
             type = Class.forName(String.format("actions.%sAction", actionString));
 
             //ActionBaseのオブジェクトにキャスト(例:actions.EmployeeActionオブジェクト→actions.ActionBaseオブジェクト)
-            action = (ActionBase) (type.asSubclass(ActionBase.class)
-                    .getDeclaredConstructor()
-                    .newInstance());
+//            action = (ActionBase) (type.asSubclass(ActionBase.class)
+//                    .getDeclaredConstructor()
+//                    .newInstance());
+            action = (ActionBase)type.getDeclaredConstructor().newInstance();
 
         } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | SecurityException
                 | IllegalArgumentException | InvocationTargetException| NoSuchMethodException e) {
